--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,60 @@ body {
 
 /* --------------- 3.1 Reusables ----------------------- */
 
+.cards-position-wrapper {
+    position: absolute;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    top: -40px;
+}
+
+.general-card-style {
+    background-color: #eeeeee;
+    font-size: small;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+.general-card-style img {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.recipe-card-text-wrapper {
+    min-width: 300px;
+    padding: 20px;
+    position: absolute;
+    bottom: 0px;
+    background-color: #eeeeee;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.space-between-wrap-recipe-cards {
+    display: flex;
+    justify-content: space-between;
+}
+
+.general-card-style p {
+    font-weight: bold;
+}
+
+.time-icon {
+    width: 10px;
+}
+
+span {
+    padding-top: 15px;
+}
+
+.recipe-card-text-wrapper {
+    max-width: 300px;
+}
+
 /* --------------- 3.2 Other --------------------------- */
 
 /* ------------------------------- 4. Areas ---------------------------------------- */
@@ -140,101 +194,44 @@ header button {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: relative;
     align-items: center;
-    min-height: 200px;
+    min-height: 350px;
 }
 
-.cards-position-wrapper {
-    position: absolute;
-    align-items: center;
+.random-card-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    top: -40px;
+    align-items: center;
+    flex-basis: 1000px;
 }
 
-.general-card-style {
-    background-color: #eeeeee;
-    font-size: small;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.general-card-style img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-
-
-
-.space-between-wrap-recipe-cards {
-    display: flex;
-    justify-content: space-between;
-}
-
-.general-card-style p {
-    font-weight: bold;
-}
-
-.first-card-wrapper {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    flex-basis: 300px;
-    box-shadow: -5px 10px 18px #888888;
-}
-
-.second-card-wrapper {
+.random-card-wrapper {
     border-radius: 5px;
-    flex-basis: 400px;
-    box-shadow: 5px 10px 18px #888888;
-    min-height: 150px;
-
+    box-shadow: -5px 10px 18px #888888;
+    position: relative;
 }
 
-.third-card-wrapper {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    flex-basis: 300px;
-    box-shadow: 10px 10px 10px #888888;
+.random-card-wrapper:nth-child(even){
+
+    width: 350px;
 }
 
-.first-card-wrapper img {
-    border-top-right-radius: 0;
+.random-card-wrapper:nth-child(even) .recipe-card-text-wrapper {
+    max-width: 350px;
+    width: 350px;
 }
 
-.third-card-wrapper img {
-    border-top-left-radius: 0;
-}
-
-.time-icon {
-    width: 10px;
-}
-
-.second-card-wrapper .recipe-card-text-wrapper{
-    min-width:  340px;
-}
-
-.recipe-card-text-wrapper {
-    min-width: 300px;
-    padding: 20px;
+.random-card-align {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    bottom: 0px;
-    background-color: #eeeeee;
+    top: 350px;
+
 }
 
-span {
-    padding-top: 15px;
-}
 
-.first-card-wrapper .recipe-card-text-wrapper {
-    box-shadow: -5px 0 20px #888888 inset;
-}
-
-.third-card-wrapper .recipe-card-text-wrapper {
-    box-shadow: 15px 0 18px #888888 inset;
-}
 
 /* ------------------------------- 4.4 Search bar -------------------------------- */
 
@@ -296,7 +293,6 @@ span {
     align-items: center;
     flex-wrap: wrap;
     max-width: 1200px;
-
 }
 
 .result-card-wrapper {
@@ -306,6 +302,22 @@ span {
     border-radius: 5px;
     box-shadow: -5px 10px 18px #888888;
     position: relative;
+}
+
+.recipe-card-img {
+    border-radius: 5px;
+
+}
+
+.result-card-wrapper span {
+    font-size: 10px;
+}
+
+.time-icon-recipe-card {
+    width: 10px;
+    height: 10px;
+    background: url("../src/Assets/icons/time.png");
+    background-size: contain;
 }
 
 /* ------------------------------- 4.6 Footer -------------------------------- */
@@ -456,11 +468,17 @@ footer li {
     width: 80px;
 }
 
-.total-output-calories-and-serving-search {
-    border: 1px solid black;
-}
-
 table {
     text-align: left;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 15px 0;
+    width: 100px;
+}
+
+.border-top {
+    border-top: 1px solid black;
 }
 /* ------------------------------- 5. Media Queries -------------------------------- */
